# qcar

./: .gitignore  README.md  run_odom.sh  run_qcar_bringup.sh  run_qcar_mapping.sh  run_teleop.sh  save_map.sh
maps/: final_map.pgm  final_map.yaml  final_map001.pgm  final_map001.yaml  final_map002.pgm  final_map002.yaml  final_map003.pgm  final_map003.yaml  final_map004.pgm  final_map004.yaml  final_map005.pgm  final_map005.yaml  latest_map.pgm  latest_map.yaml  qcar_map_20260104_140658.pgm  qcar_map_20260104_140658.yaml  qcar_map_20260125_053029.pgm  qcar_map_20260125_053029.yaml  qcar_map_20260129_080029.pgm  qcar_map_20260129_080029.yaml  qcar_map_20260131_113324.pgm  qcar_map_20260131_113324.yaml  qcar_map_20260205_064547.pgm  qcar_map_20260205_064547.yaml
src/custom_hybrid_planner/: CMakeLists.txt  custom_hybrid_planner_plugin.xml  package.xml
src/custom_hybrid_planner/include/custom_hybrid_planner/: hybrid_planner.hpp
src/custom_hybrid_planner/include/nav2_core/: global_planner.hpp
src/custom_hybrid_planner/src/: hybrid_planner.cpp  hybrid_planner_server.cpp
src/qcar_amcl/: package.xml  setup.cfg  setup.py
src/qcar_amcl/qcar_amcl/: amcl_node.py
src/qcar_lidar/: package.xml  setup.cfg  setup.py
src/qcar_lidar/launch/: lidar.launch.py
src/qcar_lidar/qcar_lidar/: qcar_lidar_node.py
src/qcar_nav2_bringup/: package.xml  setup.cfg  setup.py
src/qcar_nav2_bringup/config/: bt_navigation.xml  nav2_params.yaml  nav2_params_rpp.yaml  nav2_params_stanley.yaml  nav2_params_vector_pursuit.yaml  qcar_cartographer.lua  slam_toolbox_online.yaml
src/qcar_nav2_bringup/launch/: cartorapher.launch.py  localization.launch.py  nav2_online.launch.py  qcar_bringup.launch.py  slam_launch.launch.py  slam_launch.py
src/qcar_nav2_bringup/qcar_nav2_bringup/: direct_map_publisher.py  map_republisher.py  path_visualizer.py  qcar_hardware_interface.py  send_nav_goal.py
src/qcar_odom/: package.xml  setup.cfg  setup.py
src/qcar_odom/config/: ekf.yaml  path_comparison.rviz
src/qcar_odom/launch/: odom.launch.py  sensor_fusion.launch.py
src/qcar_odom/qcar_odom/: path_comparison.py  qcar_odom.py  qcar_odom.py.save  simple_ekf.py
src/qcar_teleop/: package.xml  setup.cfg  setup.py
src/qcar_teleop/launch/: teleop.launch.py
src/qcar_teleop/qcar_teleop/: cmd_vel_to_qcar.py  manual_teleop.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py  simple_robot_launch.py
src/robot_description/rviz/: qcar.rviz
src/robot_description/urdf/: qcar_model (copy).xacro  qcar_model.xacro
src/rpp_controller/: CMakeLists.txt  package.xml  rpp_controller_plugin.xml
src/rpp_controller/include/nav2_core/: controller.hpp
src/rpp_controller/include/rpp_controller/: regulated_pure_pursuit_controller.hpp
src/rpp_controller/src/: regulated_pure_pursuit_controller.cpp  rpp_controller_server.cpp
src/stanley_controller/: CMakeLists.txt  package.xml  stanley_controller_plugin.xml
src/stanley_controller/include/stanley_controller/: stanley_controller.hpp
src/stanley_controller/src/: stanley_controller.cpp  stanley_controller_server.cpp
src/vector_pursuit_controller/: CMakeLists.txt  package.xml  vector_pursuit_controller_plugin.xml
src/vector_pursuit_controller/include/vector_pursuit_controller/: vector_pursuit_controller.hpp
src/vector_pursuit_controller/src/: vector_pursuit_controller.cpp  vector_pursuit_controller_server.cpp
