<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpp_controller</name>
  <version>0.0.0</version>
  <description>Regulated Pure Pursuit controller plugin for Nav2</description>
  <maintainer email="moaizsaeed2004@gmail.com">nvidia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<export>
  <build_type>ament_cmake</build_type>
  <nav2_core plugin="${prefix}/rpp_controller_plugin.xml" />
</export>
</package>
